# fasta-kmer-counter

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: async_file.rs  main.rs
test/: a.fa
